[gd_scene load_steps=2 format=3 uid="uid://4s62i5kfprqw"]

[ext_resource type="Script" path="res://system/hfsm/main_state/MAIN_STATE_SCRIPT.gd" id="1_gup4u"]

[node name="GAMEPLAY_MENU" type="Node"]
script = ExtResource("1_gup4u")
