[gd_scene load_steps=2 format=3 uid="uid://cuvqwg6hqv6dt"]

[ext_resource type="Script" path="res://system/hfsm/main_state/MAIN_STATE_SCRIPT.gd" id="1_edf6e"]

[node name="SYSTEM_MENU" type="Node"]
script = ExtResource("1_edf6e")
